--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "15.4.1",
     "react-native": "0.38.0",
-    "react-native-drawer": "^2.3.0"
+    "react-native-drawer": "^2.3.0",
+    "react-native-vector-icons": "^3.0.0"
   },
   "jest": {
     "preset": "react-native"
